@@ -1,3 +1,13 @@
+2022-02-11  Adrian Perez de Castro  <aperez@igalia.com>
+
+        [CMake] Use ld.lld by default for development builds where available
+        https://bugs.webkit.org/show_bug.cgi?id=235979
+
+        Reviewed by Michael Catanzaro.
+
+        * Source/cmake/OptionsCommon.cmake: Enable USE_LD_LLD by default for developers builds
+        when ld.lld is available. While at it, improve the match on LD_VERSION to be more robust.
+
 2022-02-10  Filip Pizlo  <fpizlo@apple.com>
 
         Unreviewed, add an alternate email address.
